# Riverside-chatbot

./: .env.example  .gitignore  LICENSE  README.md  llms.txt  main.py  notes.txt  package.json
.github/workflows/: ci.yml  deploy-backend-aws.yml  deploy-frontend-vercel.yml  preview-frontend-vercel.yml  pull-request-to-main-branch.yml  push-to-issue-branch.yml  push-to-main-branch-deploy-gh-pages.yml
AWS-deployed-backend/: README.md  lambda_handler.py  main.py
AWS-deployed-backend/app/: README.md  __init__.py  data.py  matchers.py  models.py  requirements.txt
Project-explained/: README.md
Project-explained/Data and requirements/: README.md
Riverside-books-CLI/: README.md  main.py  pyproject.toml  requirements.txt  riverside-chatbot.ps1
Riverside-books-CLI/riverside_chatbot_cli_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Riverside-books-CLI/riverside_cli_app/: __init__.py  chatbot.py  cli.py  data.py  matchers.py  models.py  tui.py  tui.tcss
Riverside-books-CLI/riverside_cli_app/runtime_assets/: faqs.json
Vercel-deployed-frontend/: README.md  index.html
assets/: README.md
component/: README.md  custom-elements.json  index.html  package.json  rollup.config.js  tsconfig.json
notebooks/: riverside_function_breakdown.ipynb
src/: README.md  __init__.py  chatbot.py  data.py  index.ts  live_test.py  matcher.py  matcher.ts  matchers.py  types.py  types.ts
tests/: README.md  matcher.test.ts  test_cli.py  test_evals.py  test_matchers.py
website/: README.md  docusaurus.config.js  package.json
(+22 files in other folders)
